--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "12.3.4",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "sass": "1.62.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.24",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.5",
+    "autoprefixer": " 10.4.14",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "postcss": "8.4.22",
+    "tailwindcss": "3.3.1",
     "typescript": "4.4.3"
   }
 }
