--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "antd": "^5.4.4",
+    "next": "^12.3.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "sass": "1.62.0"
   },
   "devDependencies": {
@@ -21,7 +22,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "8.4.22",
-    "tailwindcss": "3.3.1",
+    "tailwindcss": "^3.3.1",
     "typescript": "4.4.3"
   }
 }
