--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "5.0.3",
     "next": "12.3.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "sass": "1.62.0"
+    "react-dom": "18.0.0"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
@@ -21,7 +21,8 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "8.4.22",
+    "sass": "1.62.1",
     "tailwindcss": "3.3.1",
-    "typescript": "4.4.3"
+    "typescript": "5.0.4"
   }
 }
