--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "0.11.0",
     "antd": "5.0.3",
+    "axios": "1.4.0",
     "next": "12.3.4",
+    "query-string": "8.1.0",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-facebook-login": "4.1.1"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.5",
+    "@types/react-facebook-login": "4.1.5",
     "autoprefixer": " 10.4.14",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
