--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-oauth/google": "0.11.0",
+    "@reduxjs/toolkit": "1.9.5",
     "antd": "5.0.3",
     "axios": "1.4.0",
     "next": "12.3.4",
+    "next-auth": "4.22.1",
+    "next-redux-wrapper": "8.1.0",
     "query-string": "8.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-facebook-login": "4.1.1"
+    "redux": "4.2.1"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
     "@types/react": "18.0.5",
     "@types/react-facebook-login": "4.1.5",
     "autoprefixer": " 10.4.14",
+    "dotenv-cli": "7.2.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "8.4.22",
