--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.9.5",
     "antd": "5.0.3",
-    "axios": "^1.4.0",
+    "axios": "1.4.0",
     "next": "12.3.4",
     "next-auth": "4.22.1",
     "next-redux-wrapper": "8.1.0",
     "query-string": "8.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "4.8.0",
     "redux": "4.2.1"
   },
   "devDependencies": {
