--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
     "postcss": "8.4.27",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.10.1",
+    "sass": "^1.64.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
