--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "eslint-config-next": "^14.0.1",
+    "next": "^14.0.1",
     "postcss": "8.4.27",
     "query-string": "^8.1.0",
     "react": "18.2.0",
